src/test/ui/symbol-names/foreign-types.stderr
error: symbol-name(_RMCsCRATE_HASH_13foreign_typesINtB<REF>_5CheckNvB<REF>_11ForeignTypeE)
  --> $DIR/foreign-types.rs:13:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<foreign_types[HASH]::Check<foreign_types[HASH]::ForeignType>>)
  --> $DIR/foreign-types.rs:13:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<foreign_types::Check<foreign_types::ForeignType>>)
  --> $DIR/foreign-types.rs:13:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

